K8/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app.service: api
  name: api
spec:
  replicas: 4
  selector:
    matchLabels:
      app.service: api
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.network/app-net: "true"
        app.service: api
    spec:
      containers:
        - image: ankit123nagarro/api
          name: api
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: appsettings-volume
              mountPath: /app/settings
          resources: {}
      volumes:
        - name: appsettings-volume
          configMap:
            name: appsettings
      restartPolicy: Always
status: {}
