K8/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f D:\NAGP\Kubernetes\Solution\kubernetes\docker-compose.yml
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: app
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: app
  strategy: {}
  template:
    metadata:      
      creationTimestamp: null
      labels:
        io.kompose.network/app-net: "true"
        io.kompose.service: app
    spec:
      containers:
        - env:
            - name: NODE_ENV
              value: production
          image: app
          name: app
          ports:
            - containerPort: 3000
          resources: {}
      restartPolicy: Always
status: {}
