K8/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app.service: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app.service: db
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.network/app-net: "true"
        app.service: db
    spec:
      containers:
        - env:
            - name: ACCEPT_EULA
              value: "Y"
            - name: SA_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: mysecret
                  key: password
          image: mcr.microsoft.com/mssql/server
          name: db
          ports:
            - containerPort: 1433
          resources: {}
          volumeMounts:
            - mountPath: /home/app/data
              name: app
      restartPolicy: Always
      volumes:
        - name: app
          persistentVolumeClaim:
            claimName: app
status: {}
