K8/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app.service: api
  name: api
spec:
  type: LoadBalancer
  ports:
    - name: "5000"
      port: 5000
      targetPort: 5000
  selector:
    app.service: api
status:
  loadBalancer: {}
