K8/app-net-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: app-net
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.network/app-net: "true"
  podSelector:
    matchLabels:
      app.network/app-net: "true"
